--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "^9.1.2",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.3",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
@@ -35,6 +36,8 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@mui/icons-material": "^5.11.11",
+    "@mui/material": "^5.11.13",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
